--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
+        <servlet-name>CGIServlet</servlet-name>
+        <servlet-class>weblogic.servlet.CGIServlet</servlet-class>
+        <init-param>
+            <param-name>cgiDir</param-name>
+            <param-value>
+                /cgi-bin
+            </param-value>
+        </init-param>
+        <init-param>
+            <param-name>executable</param-name>
+            <param-value>python</param-value>
+        </init-param>
+    </servlet>
+    <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>Servlets.LoginServlet</servlet-class>
     </servlet>
@@ -252,6 +266,14 @@
         <servlet-name>Ipra2018NewServlet</servlet-name>
         <servlet-class>Servlets.Ipra2018NewServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>TestServlet</servlet-name>
+        <servlet-class>Servlets.TestServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CGIServlet</servlet-name>
+        <url-pattern>/cgi-bin/*</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/gotomain</url-pattern>
@@ -513,6 +535,10 @@
     <servlet-mapping>
         <servlet-name>Ipra2018NewServlet</servlet-name>
         <url-pattern>/ipra2018new</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TestServlet</servlet-name>
+        <url-pattern>/test</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
